Fix .github/workflows/update-docker-tag-and-create-new-release.yml permissions
https://github.com/marketplace/actions/create-pull-request#token

--- a/.github/workflows/update-docker-tag-and-create-new-release.yml
+++ b/.github/workflows/update-docker-tag-and-create-new-release.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Create Pull Request
         id: create_pr
         uses: peter-evans/create-pull-request@v7
+        permissions:
+          contents: write
+          pull-requests: write
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "Update Docker image tag to ${{ github.event.client_payload.rector_version }}"
